--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ plugins {
     id("com.google.cloud.tools.jib") version "3.3.1"
     id("org.sonarqube") version "3.3"
     id("jacoco")
+    id "com.microsoft.azure.azurewebapp" version "1.1.0"
 }
 
 apply plugin: 'java'
@@ -37,6 +38,19 @@ repositories {
     gradlePluginPortal()
     mavenLocal()
 }
+
+azurewebapp {
+    subscription = 'ea6f8bca-b606-4e94-a755-cfffa091ec36'
+    resourceGroup = 'ZarzadzanieDevSecOps'
+    appName = 'vulnerable-java-application'
+    pricingTier = 'B3' 
+    region = 'eastus' 
+    runtime {
+        os = 'Linux' 
+        webContainer = 'Java SE'
+        javaVersion = 'Java 17'
+    	    }
+	  }
 
 sonarqube {
   properties {
