--- a/build.gradle
+++ b/build.gradle
@@ -42,8 +42,8 @@ repositories {
 azurewebapp {
     subscription = 'ea6f8bca-b606-4e94-a755-cfffa091ec36'
     resourceGroup = 'ZarzadzanieDevSecOps'
-    appName = 'vulnerable-java-application'
-    pricingTier = 'B3' 
+    appName = 'VulnerableApp-OWASP'
+    pricingTier = 'P3v2' 
     region = 'eastus' 
     runtime {
         os = 'Linux' 
