--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 bootJar {
-    baseName = 'VulnerableApp'
-    version =  '1.0.0'
+    archiveBaseName = 'VulnerableApp'
+    archiveVersion =  '1.0.0'
 }
 
 configurations {
